--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
